--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@ s
                 <br>
             <ul><li><a href="#start" class="yellow-text text-darken-4 start">Voit palata tästä sivun alkuun</a></li>
             </ul>
+            <br>
+            <p class="white-text">Kuvat Pixapaysta ja tekstit Lorem sekä Wikipedia.</p>
         </div>
     </section>
 
