Lisätty sivun tekijän linkki

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ s
             <ul><li><a href="#start" class="yellow-text text-darken-4 start">Voit palata tästä sivun alkuun</a></li>
             </ul>
             <br>
-            <p class="white-text">Kuvat Pixapaysta ja tekstit Lorem sekä Wikipedia.</p>
+            <p class="white-text">Kuvat Pixapaysta ja tekstit Lorem sekä Wikipedia. Tehnyt <a href="https://www.jaricode.fi">JariCode</a></p>
         </div>
     </section>
 
