Lisätty asukkien esittelyt

--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
             </div>
             <div class="col s12 l6">
                 <h2 class="yellow-text text-darken-4">Asukit</h2>
-                <p class=" white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem unde dolore explicabo excepturi beatae officia cupiditate nemo, eligendi in ex?</p>
+                <h3 class="white-text">Silmäpuoli - Metsän vartija</h3>
+                <p class=" white-text">Yön pimeydestä esiin astuu Silmäpuoli, hahmo, jonka kasvoja peittää karmiva, 
+                arpeutunut naamio. Hänen musta takkinsa kätkee alleen tuntemattoman menneisyyden, ja hänen läsnäolonsa tuo mukanaan kylmän kuoleman auran. Kerrotaan, että hän vartioi metsää, 
+                jossa elävien ja kuolleiden rajat hämärtyvät. Kukaan ei tiedä, kuka hän todella on – mutta ne, jotka ovat kohdanneet hänet, eivät ole enää palanneet kertomaan tarinaa.</p>
             </div>
         </div>
 
@@ -117,8 +119,10 @@
             </div>
             <div class="col s12 l6 pull-l5 right-align">
                 <h2 class="yellow-text text-darken-4">Asukit</h2>
-                <p class=" white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem unde dolore explicabo excepturi beatae officia cupiditate nemo, eligendi in ex?</p>
+                <h3 class="white-text">Muriel - Kävelevä kirottu</h3>
+                <p class=" white-text">Hän oli kerran ihminen, mutta nyt vain kuolema pitää häntä otteessaan. Muriel vaeltaa metsän varjoissa, 
+                silmät tyhjinä ja liha lahoavana, etsien loputonta nälkäänsä tyydyttävää saalista. 
+                Hänen kohtalonsa on sinetöity, mutta jokin hänessä muistaa vielä elämän… ja kärsii siitä. Jos kuulet hänen laahaavat askeleensa takanasi, on jo liian myöhäistä juosta.</p>
             </div>
         </div>
 
@@ -128,8 +132,10 @@
             </div>
             <div class="col s12 l6">
                 <h2 class="yellow-text text-darken-4">Asukit</h2>
-                <p class=" white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem unde dolore explicabo excepturi beatae officia cupiditate nemo, eligendi in ex?</p>
+                <h3 class="white-text">Eleanor Harper - Viimeinen eloonjäänyt</h3>
+                <p class=" white-text">Eleanor vaeltaa metsän halki lyhty kädessään, ainoa valonlähde pimeyden keskellä. 
+                Hän löysi turvapaikan syrjäisestä mökistä, mutta tietää, ettei se pidättele kauhuja ikuisesti. Menneisyys on hänelle sumuinen muisto. Kaikki, mitä hän tietää, 
+                on että hänen täytyy selviytyä. Kuka hän on? Miksi hän on täällä? Ja mikä odottaa mökin seinien ulkopuolella, valmiina repimään viimeisenkin toivon?</p>
             </div>
         </div>
     </section>
