Lisätty Ollaan kuulolla osioon tekstit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <style>
         header {
-            background: url(/kuvat/vuorimaisema.jpg);
+            background: url(kuvat/vuorimaisema.jpg);
             background-size: cover;
             background-position: center;
             min-height: 1000px;
@@ -102,7 +102,7 @@
     <section class="container section" id="photo">
         <div class="row" id="asukit">
             <div class="col s12 l4">
-                <img src="/kuvat/naamio.jpg" alt="naamio" class="responsive-img materialboxed" width="650">
+                <img src="kuvat/naamio.jpg" alt="naamio" class="responsive-img materialboxed" width="650">
             </div>
             <div class="col s12 l6">
                 <h2 class="yellow-text text-darken-4">Asukit</h2>
@@ -115,7 +115,7 @@
 
         <div class="row">
             <div class="col s12 l4 push-l5 offset-l1">
-                <img src="/kuvat/zombie.jpg" alt="zombie" class="responsive-img materialboxed" width="650">
+                <img src="kuvat/zombie.jpg" alt="zombie" class="responsive-img materialboxed" width="650">
             </div>
             <div class="col s12 l6 pull-l5 right-align">
                 <h2 class="yellow-text text-darken-4">Asukit</h2>
@@ -128,7 +128,7 @@
 
         <div class="row">
             <div class="col s12 l4">
-                <img src="/kuvat/nainen.jpg" alt="nainen" class="responsive-img materialboxed" width="650">
+                <img src="kuvat/nainen.jpg" alt="nainen" class="responsive-img materialboxed" width="650">
             </div>
             <div class="col s12 l6">
                 <h2 class="yellow-text text-darken-4">Asukit</h2>
@@ -144,7 +144,7 @@
     <!--hautausmaa liikkuva tautakuva alkaa-->
     <div class="parallax-container">
         <div class="parallax">
-            <img src="/kuvat/semetery.jpg" alt="hautausmaa" class="responsive-img">
+            <img src="kuvat/semetery.jpg" alt="hautausmaa" class="responsive-img">
         </div>
     </div>
     <!--Hautausmaa liikkuva taustakuva loppuu-->
@@ -169,10 +169,11 @@
                 </ul>
                 <div class="col s12" id="alku">
                     <p class="flow-text yellow-text text-darken-4">Lopun alku</p>
-                    <p class="white-text">Alussa sisarukset Barbra ja Johnny käyvät hautausmaalla isänsä haudalla. 
-                    Zombiksi (elävistä kuolleista tosin käytetään elokuvassa nimitystä "ghoul") muuttunut vanha mies hyökkää heidän kimppuunsa ihmislihaa himoten. 
+                    <p class="white-text">Sisarukset Barbra ja Johnny käyvät hautausmaalla isänsä haudalla. 
+                    Zombiksi muuttunut vanha mies hyökkää heidän kimppuunsa ihmislihaa himoten. 
                     Barbra onnistuu pakenemaan ja päätyy autiolle maatalolle, jossa piilottelee myös Ben. He laudoittavat talon ovet ja ikkunat, kun lauma zombeja alkaa piirittää sitä.
-                    Talon kellarista löytyy myös muita ihmisiä, Tom ja Judy sekä pariskunta Harry ja Helen Cooper tyttärineen. Cooperien tytär Karen on loukkaantunut zombien hyökkäyksestä ja on sairas. </p>
+                    Talon kellarista löytyy myös muita ihmisiä, Tom ja Judy sekä pariskunta Harry ja Helen Cooper tyttärineen. 
+                    Cooperien tytär Karen on loukkaantunut zombien hyökkäyksestä ja on sairas. </p>
                 </div>
                 <div class="col s12" id="selviytyminen">
                     <p class="flow-text yellow-text text-darken-4">Selviytyminen</p>
@@ -180,9 +181,11 @@
                     Ben onnistuu murtautumaan takaisin sisälle ja laudoittaa Harryn kanssa oven. 
                     Zombit yrittävät päästä talon sisälle ja Benin estäessä niitä hän pudottaa kiväärinsä. Harry nappaa sen ja osoittaa Beniä sillä. 
                     Ben onnistuu saamaan kiväärin takaisin ja ampuu Harryä. Harry raahautuu kellariin ja kuolee tyttärensä vierelle.
-                    Zombiksi muuttunut Karen Cooper (Kyra Schon).
-                    Myöhemmin Helen löytää kellarista zombiksi muuttuneen tyttärensä, joka syö isänsä ruumista. Karen tappaa äitinsä. Barbra näkee Johnnyn zombijoukossa ja järkyttyy niin paljon, ettei pysty puolustautumaan zombien murtautuessa talon sisälle. 
-                    Ben pakenee kellariin ja onnistuu selviämään yön yli. Hän palaa yläkertaan ja kuulee zombien metsästäjien kiväärien laukauksia. Yksi metsästäjä erehtyy luulemaan häntä zombiksi ja ampuu Benin. </p>
+                    Zombiksi muuttunut Karen Cooper.
+                    Myöhemmin Helen löytää kellarista zombiksi muuttuneen tyttärensä, joka syö isänsä ruumista. Karen tappaa äitinsä. Barbra näkee 
+                    Johnnyn zombijoukossa ja järkyttyy niin paljon, ettei pysty puolustautumaan zombien murtautuessa talon sisälle. 
+                    Ben pakenee kellariin ja onnistuu selviämään yön yli. Hän palaa yläkertaan ja kuulee zombien metsästäjien kiväärien laukauksia. 
+                    Yksi metsästäjä erehtyy luulemaan häntä zombiksi ja ampuu Benin. </p>
                 </div>
             </div>
         </div>
@@ -192,7 +195,7 @@ s
     <!--Toinen liikkuva taustakuva alkaa-->
     <div class="parallax-container">
         <div class="parallax">
-            <img src="/kuvat/metsävih.jpg" alt="Vihreä metsä" class="responsive-img">
+            <img src="kuvat/metsävih.jpg" alt="Vihreä metsä" class="responsive-img">
         </div>
     </div>
     <!--Toinen liikkuva taustakuva loppuu-->
@@ -202,11 +205,9 @@ s
         <div class="row">
             <div class="col s12 l5">
                 <h2 class="yellow-text text-darken-4">Ollaan kuulolla</h2>
-                <p class="white-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, tenetur?</p>
-                <p class="white-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, tenetur?</p>
-                <p class="white-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, tenetur?</p>
-                <p class="white-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, tenetur?</p>
-                <p class="white-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, tenetur?</p>
+                <p class="white-text">Yö pimenee, metsä hengittää, ja jossain pimeyden keskellä jokin liikkuu. Oletko varma, 
+                että olet yksin? Ehkä kuulet kuiskausten sekoittuvan tuulen huminaan… Ehkä varjot eivät olekaan vain varjoja.
+                Pidä lyhty palamassa, äläkä eksy polulta. Tämä tarina ei ole vielä ohi.</p>
             </div>
             <div class="col s12 l5 offset-l2">
                 <form action="">
@@ -237,13 +238,13 @@ s
             <ul><li><a href="#start" class="yellow-text text-darken-4 start">Voit palata tästä sivun alkuun</a></li>
             </ul>
             <br>
-            <p class="white-text">Kuvat Pixapaysta ja tekstit Lorem sekä Wikipedia. Tehnyt <a href="https://www.jaricode.fi">JariCode</a></p>
+            <p class="white-text">Kuvat Pixapaysta ja tekstit Wikipediasta. Tehnyt <a href="https://www.jaricode.fi">JariCode</a></p>
         </div>
     </section>
 
     <div class="parallax-container">
         <div class="parallax">
-            <img src="/kuvat/talo.jpg" alt="talo" class="responsive-img">
+            <img src="kuvat/talo.jpg" alt="talo" class="responsive-img">
         </div>
     </div>
 
